WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277546
Primitives (number, string, null, etc.) thrown from JS pass through catch_all in wasm
https://bugs.webkit.org/show_bug.cgi?id=277546
Summary
Primitives (number, string, null, etc.) thrown from JS pass through catch_all...
bashorov
Reported
2024-08-02 05:27:42 PDT
Created
attachment 472044
[details]
repro 1. Unzip attached file 2. run jsc --useWasmGC=true --module-file=./test.mjs Expected result: ``` throw catch_all test passed ``` Actual result: ``` throw Failed with exception! Exception: 42 typeof: number Message: undefined Name: undefined Stack: undefined Exception: Wrong box result 'undefined'; Expected "OK" ```
Attachments
repro
(45.88 KB, application/zip)
2024-08-02 05:27 PDT
,
bashorov
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-09 05:28:14 PDT
<
rdar://problem/133534600
>
Yusuke Suzuki
Comment 2
2024-09-09 18:20:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33359
EWS
Comment 3
2024-09-10 01:28:37 PDT
Committed
283404@main
(78f27049a0ff): <
https://commits.webkit.org/283404@main
> Reviewed commits have been landed. Closing PR #33359 and removing active labels.
EWS
Comment 4
2024-09-11 13:58:09 PDT
Committed
283286.12@safari-7620-branch
(0b0fc8f81eea): <
https://commits.webkit.org/283286.12@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1725 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug