Primitives (number, string, null, etc.) thrown from JS pass through catch_all in wasm https://bugs.webkit.org/show_bug.cgi?id=277546 rdar://133534600

Reviewed by Yijia Huang.

Wasm catch_all should accept primitive values. We should mark
m_catchableFromWasm to true when it is not a specific type of error
object.

* JSTests/wasm/stress/exception-thrown-from-js-to-wasm-catchall-primitive.js: Added.
(import.Builder.from.string_appeared_here.import.as.assert.from.string_appeared_here.callback):
* Source/JavaScriptCore/interpreter/Interpreter.cpp:
(JSC::UnwindFunctor::UnwindFunctor):

Canonical link: https://commits.webkit.org/283404@main